--- a/snippets/canvas/canvas-node-large.css
+++ b/snippets/canvas/canvas-node-large.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Canvas Node Large
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --font-size-node-large: 5em;
