--- a/snippets/cssclasses/minimalist.css
+++ b/snippets/cssclasses/minimalist.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Minimalist
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .minimalist {
   --blockquote-border-thickness: 0;
