--- a/snippets/editor/callouts/callout-style.css
+++ b/snippets/editor/callouts/callout-style.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Callout styling
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --callout-quote: var(--color-gray-rgb);
@@ -27,9 +27,11 @@ body {
 [data-callout-metadata~=accent] {
   border-color: hsl(var(--accent-h), var(--accent-s), var(--accent-l), var(--callout-border-opacity));
 }
-[data-callout-metadata~=accent] > .callout-title {
+
+[data-callout-metadata~=accent]>.callout-title {
   background: linear-gradient(to right, hsl(var(--accent-h), var(--accent-s), var(--accent-l), 0.1), transparent);
 }
-[data-callout-metadata~=accent] > .callout-content {
+
+[data-callout-metadata~=accent]>.callout-content {
   border-top: var(--callout-border-width) dashed hsl(var(--accent-h), var(--accent-s), var(--accent-l), var(--callout-border-opacity));
 }
