--- a/snippets/editor/embeds/embed-wide.css
+++ b/snippets/editor/embeds/embed-wide.css
@@ -1,9 +1,10 @@
 /* GPLv3 license
 FAS - Embed Wide
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 /* Compatibility with ITS theme/snippets */
-.markdown-source-view > div, .markdown-preview-view {
+.markdown-source-view>div,
+.markdown-preview-view {
   container: markdown-view/inline-size;
 }
 
