--- a/snippets/editor/headings/headings-color.css
+++ b/snippets/editor/headings/headings-color.css
@@ -1,33 +1,27 @@
 /* GPLv3 license
 FAS - Headings Color
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 @supports (color: hsl(from white h s l)) {
   .theme-dark {
-    --middle-color: color-mix(
-        in srgb-linear,
+    --middle-color: color-mix(in srgb-linear,
         hsl(from var(--color-base-00) h 100% 55%),
-        hsl(from var(--color-base-100) h 100% 55%) 50%
-    );
-    --middle-color-complement: color-mix(
-        in srgb-linear,
+        hsl(from var(--color-base-100) h 100% 55%) 50%);
+    --middle-color-complement: color-mix(in srgb-linear,
         hsl(from var(--color-base-00) calc(h - 90) 100% 55%),
-        hsl(from var(--color-base-100) calc(h + 90) 100% 55%) 50%
-    );
+        hsl(from var(--color-base-100) calc(h + 90) 100% 55%) 50%);
   }
+
   .theme-light {
-    --middle-color: color-mix(
-        in srgb-linear,
+    --middle-color: color-mix(in srgb-linear,
         hsl(from var(--color-base-00) h 100% 40%),
-        hsl(from var(--color-base-100) h 100% 40%) 50%
-    );
-    --middle-color-complement: color-mix(
-        in srgb-linear,
+        hsl(from var(--color-base-100) h 100% 40%) 50%);
+    --middle-color-complement: color-mix(in srgb-linear,
         hsl(from var(--color-base-00) calc(h - 90) 100% 40%),
-        hsl(from var(--color-base-100) calc(h + 90) 100% 40%) 50%
-    );
+        hsl(from var(--color-base-100) calc(h + 90) 100% 40%) 50%);
   }
 }
+
 @supports not (color: hsl(from white h s l)) {
   .style-settings-container .setting-item[data-id=header-color] .setting-item-info::after {
     content: '"Hue" and "Complementary hue" not supported on your device.';
@@ -37,6 +31,7 @@ Author: ElsaTam (Kapirklaa in Discord)
     line-height: var(--line-height-tight);
   }
 }
+
 body {
   --heading-color: none;
 }
@@ -58,22 +53,25 @@ body {
 }
 
 @container style(--heading-color: hue) {
-  :is(.markdown-source-view, .markdown-preview-view) > * {
+  :is(.markdown-source-view, .markdown-preview-view)>* {
     --header-gradient-base-color: var(--middle-color);
   }
 }
+
 @container style(--heading-color: complement) {
-  :is(.markdown-source-view, .markdown-preview-view) > * {
+  :is(.markdown-source-view, .markdown-preview-view)>* {
     --header-gradient-base-color: var(--middle-color-complement);
   }
 }
+
 @container style(--heading-color: accent) {
-  :is(.markdown-source-view, .markdown-preview-view) > * {
+  :is(.markdown-source-view, .markdown-preview-view)>* {
     --header-gradient-base-color: var(--text-accent);
   }
 }
+
 @container style(--heading-color: hue) or style(--heading-color: complement) or style(--heading-color: accent) {
-  :is(.markdown-source-view, .markdown-preview-view) > * {
+  :is(.markdown-source-view, .markdown-preview-view)>* {
     --h1-color: var(--header-gradient-base-color);
     --h2-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 10%);
     --h3-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 20%);
@@ -82,8 +80,9 @@ body {
     --h6-color: color-mix(in srgb, var(--header-gradient-base-color), var(--text-normal) 80%);
   }
 }
+
 @container style(--heading-color: rainbow) {
-  :is(.markdown-source-view, .markdown-preview-view) > * {
+  :is(.markdown-source-view, .markdown-preview-view)>* {
     --h1-color: var(--color-rainbow-1);
     --h2-color: var(--color-rainbow-2);
     --h3-color: var(--color-rainbow-3);
