--- a/snippets/window/sidebar-layout.css
+++ b/snippets/window/sidebar-layout.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Sidebar
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --cutout-corner-radius: 13px;
@@ -51,13 +51,16 @@ body {
     outline-offset: calc(-1 * var(--cutout-outline-inset));
   }
 }
+
 @supports not (corner-shape: scoop) {
   .mod-sidedock .workspace-leaf {
     -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black) calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
   }
+
   .mod-sidedock .workspace-leaf-content {
     padding: var(--cutout-corner-radius);
   }
+
   .mod-sidedock .workspace-leaf::before {
     content: "";
     position: absolute;
@@ -66,7 +69,8 @@ body {
     -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent calc(100% - 1px), black calc(100% - 1px) 100%, transparent) calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius)), linear-gradient(90deg, black 2px, transparent 0) -1px 50%/100% calc(100% - var(--cutout-corner-radius) * 2 + 1px) repeat-x, linear-gradient(black 2px, transparent 0) 50% -1px/calc(100% - var(--cutout-corner-radius) * 2 + 1px) 100% repeat-y;
   }
 }
-.workspace-split.mod-horizontal > * > .workspace-leaf-resize-handle {
+
+.workspace-split.mod-horizontal>*>.workspace-leaf-resize-handle {
   width: calc(100% - (var(--cutout-corner-radius) + var(--cutout-outline-inset)) * 2);
   align-self: center;
   left: calc(var(--cutout-corner-radius) + var(--cutout-outline-inset));
@@ -82,9 +86,11 @@ body {
   .is-mobile .workspace-drawer.mod-left {
     corner-shape: square scoop scoop square;
   }
+
   .is-mobile .workspace-drawer.mod-right {
     corner-shape: scoop square square scoop;
   }
+
   .is-mobile .workspace-drawer:is(.mod-right, .mod-left) {
     padding-inline: var(--cutout-outline-inset);
     border-radius: var(--cutout-corner-radius);
@@ -92,20 +98,24 @@ body {
     outline-offset: calc(-1 * var(--cutout-outline-inset));
   }
 }
+
 @supports not (corner-shape: scoop) {
   .is-mobile .workspace-drawer:is(.mod-left, .mod-right) {
     padding-inline: var(--cutout-outline-inset);
     -webkit-mask-composite: source-in;
     mask-composite: intersect;
   }
+
   .is-mobile .workspace-drawer.mod-left {
     -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 100% 0, transparent 100%, black), radial-gradient(var(--cutout-corner-radius) at 100% 100%, transparent 100%, black);
   }
+
   .is-mobile .workspace-drawer.mod-right {
     -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 0 0, transparent 100%, black), radial-gradient(var(--cutout-corner-radius) at 0 100%, transparent 100%, black);
     corner-shape: scoop;
     border-radius: var(--cutout-corner-radius);
   }
+
   .is-mobile .workspace-drawer::before {
     content: "";
     position: absolute;
@@ -114,6 +124,7 @@ body {
     -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent calc(100% - 1px), black calc(100% - 1px) 100%, transparent) calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius)), linear-gradient(90deg, black 2px, transparent 0) -1px 50%/100% calc(100% - var(--cutout-corner-radius) * 2 + 1px) repeat-x, linear-gradient(black 2px, transparent 0) 50% -1px/calc(100% - var(--cutout-corner-radius) * 2 + 1px) 100% repeat-y;
   }
 }
+
 .workspace-drawer {
   --mobile-sidebar-background: var(--workleaves-background);
 }
