--- a/snippets/canvas/canvas-node-blur.css
+++ b/snippets/canvas/canvas-node-blur.css
@@ -1,18 +1,21 @@
 /* GPLv3 license
 FAS - Canvas Node Blur
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .canvas-node:has(.tag[href="#node-blur"], .node-blur):not(.is-editing) {
   backdrop-filter: blur(8px);
 }
+
 .canvas-node:has(.tag[href="#node-blur"], .node-blur):not(.is-editing) .canvas-node-container {
   border-radius: 0;
   background: none;
   box-shadow: none;
 }
+
 .canvas-node:has(.tag[href="#node-blur"], .node-blur):not(.is-editing):not(.is-dragging):not(:hover) .canvas-node-container {
   border: 1px solid rgba(var(--canvas-color), 0.1);
 }
+
 .canvas-node:has(.tag[href="#node-blur"], .node-blur):not(.is-editing) .canvas-node-content {
   background: none;
 }
