--- a/snippets/canvas/canvas-node-image.css
+++ b/snippets/canvas/canvas-node-image.css
@@ -1,31 +1,37 @@
 /* GPLv3 license
 FAS - Canvas Node Image
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) {
   --p-spacing: 0;
   --image-shadow-offset: 0;
   container: node/size;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .canvas-node-container {
   border: none;
   box-shadow: none;
   border-radius: 0;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .canvas-node-content {
   background: none;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view {
   padding: 0;
   overflow: visible;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view::before,
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view::after {
   content: none;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) br {
   display: none;
 }
+
 .canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) img {
   width: 100cqw;
   height: 100cqh;
