--- a/snippets/canvas/canvas-node-title-neon.css
+++ b/snippets/canvas/canvas-node-title-neon.css
@@ -1,16 +1,19 @@
 /* GPLv3 license
 FAS - Canvas Node Title Neon
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-container {
   border: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing):not(.is-dragging, *:hover) .canvas-node-container {
   box-shadow: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-content {
   background: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .markdown-preview-view {
   font-family: "Neon Sans", Arial, Helvetica, sans-serif;
   text-align: center;
