--- a/snippets/canvas/canvas-node-title-poster.css
+++ b/snippets/canvas/canvas-node-title-poster.css
@@ -1,16 +1,19 @@
 /* GPLv3 license
 FAS - Canvas Node Title Poster
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .canvas-node-container {
   border: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing):not(.is-dragging, *:hover) .canvas-node-container {
   box-shadow: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .canvas-node-content {
   background: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .markdown-preview-view {
   --shadow-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
   font-family: "Science Fair", Haettenschweiler, Impact, "Arial Narrow Bold", sans-serif;
@@ -29,11 +32,13 @@ Author: ElsaTam (Kapirklaa in Discord)
     --shadow-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
   }
 }
+
 @supports not (color: hsl(from white h s l)) {
   .canvas-node:has(.tag[href="#node-title-poster"], .node-title-poster):not(.is-editing) .markdown-preview-view {
     --shadow-color: color-mix(in hsl, rgb(var(--canvas-color)), black 50%);
   }
 }
+
 @font-face {
   /* https://www.dafont.com/science-fair.font */
   font-family: "Science Fair";
