--- a/snippets/canvas/canvas-node-title-vintage.css
+++ b/snippets/canvas/canvas-node-title-vintage.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Canvas Node Title Vintage
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) .canvas-node-container {
   --s: 0.5em;
@@ -11,19 +11,23 @@ Author: ElsaTam (Kapirklaa in Discord)
   background-image: conic-gradient(from 90deg at 1px 1px, transparent 25%, rgba(var(--canvas-color), 1) 0);
   box-shadow: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) .canvas-node-content {
   background: none;
 }
+
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) .markdown-preview-view {
   font-family: "Noir-et-Blanc", Palatino, Baskerville, "Times New Roman", Times, serif;
   text-align: center;
   color: rgb(var(--canvas-color));
 }
+
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) .markdown-preview-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .canvas-node:has(.tag[href="#node-title-vintage"], .node-title-vintage):not(.is-editing) p::first-letter {
   color: color-mix(in srgb, currentColor, var(--text-normal) 50%);
   text-transform: uppercase;
