--- a/snippets/cssclasses/bullet-threading.css
+++ b/snippets/cssclasses/bullet-threading.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
+
 /* GPLv3 license
 FAS - Bullet Threading
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 
 Inspiration taken from:
 - https://gist.github.com/itsonlyjames/6d149fa636ac0bc9e278e2eab0826257
@@ -22,14 +23,17 @@ body {
     --bullet-threading-color: var(--list-marker-color);
   }
 }
+
 @container style(--fas-list-style: bullet-threading) {
   .markdown-rendered li {
     position: relative;
   }
+
   .markdown-rendered {
     /* In-between items */
   }
-  .markdown-rendered li:hover > * > li:not(li:hover ~ li):not(:hover)::before {
+
+  .markdown-rendered li:hover>*>li:not(li:hover ~ li):not(:hover)::before {
     content: "​";
     position: absolute;
     display: block;
@@ -41,6 +45,7 @@ body {
     left: calc(-1 * var(--list-indent) + var(--indentation-guide-reading-indent));
     z-index: -1;
   }
+
   .markdown-rendered li li:hover::after {
     content: "";
     display: block;
