--- a/snippets/cssclasses/note-accent.css
+++ b/snippets/cssclasses/note-accent.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Note Accent
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body.theme-light {
   --note-accent-1-h: 345.7;
@@ -81,17 +81,17 @@ body.theme-dark {
 }
 
 .markdown-source-view:is(.note-accent-1,
-.note-accent-2,
-.note-accent-3,
-.note-accent-4,
-.note-accent-5,
-.note-accent-6),
+  .note-accent-2,
+  .note-accent-3,
+  .note-accent-4,
+  .note-accent-5,
+  .note-accent-6),
 .markdown-preview-view:is(.note-accent-1,
-.note-accent-2,
-.note-accent-3,
-.note-accent-4,
-.note-accent-5,
-.note-accent-6) {
+  .note-accent-2,
+  .note-accent-3,
+  .note-accent-4,
+  .note-accent-5,
+  .note-accent-6) {
   --color-accent-hsl: var(--accent-h), var(--accent-s), var(--accent-l);
   --color-accent: hsl(var(--accent-h), var(--accent-s), var(--accent-l));
   --color-accent-1: hsl(calc(var(--accent-h) - 3), calc(var(--accent-s) * 1.02), calc(var(--accent-l) * 1.15));
@@ -130,22 +130,22 @@ body.theme-dark {
 
 /* Specific to the theme */
 .markdown-source-view:is(.note-accent-1,
-.note-accent-2,
-.note-accent-3,
-.note-accent-4,
-.note-accent-5,
-.note-accent-6),
+  .note-accent-2,
+  .note-accent-3,
+  .note-accent-4,
+  .note-accent-5,
+  .note-accent-6),
 .markdown-preview-view:is(.note-accent-1,
-.note-accent-2,
-.note-accent-3,
-.note-accent-4,
-.note-accent-5,
-.note-accent-6) {
+  .note-accent-2,
+  .note-accent-3,
+  .note-accent-4,
+  .note-accent-5,
+  .note-accent-6) {
   --banner-slope-border-color: var(--color-accent);
 }
 
 @container style(--heading-color: accent) {
-  :is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) > * {
+  :is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6)>* {
     --h1-color: var(--color-accent);
     --h2-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 10%);
     --h3-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 20%);
