--- a/snippets/editor/aside.css
+++ b/snippets/editor/aside.css
@@ -1,9 +1,10 @@
 /* GPLv3 license
 FAS - Aside
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 /* Compatibility with ITS theme/snippets */
-.markdown-source-view > div, .markdown-preview-view {
+.markdown-source-view>div,
+.markdown-preview-view {
   container: markdown-view/inline-size;
 }
 
@@ -50,6 +51,7 @@ body {
 
 @media screen {
   @container markdown-view (width > 1100px) {
+
     .is-readable-line-width.markdown-preview-view aside,
     .is-readable-line-width.markdown-preview-view .aside-right,
     .is-readable-line-width.markdown-preview-view .aside-left {
@@ -58,12 +60,14 @@ body {
       border-block: none;
       padding-block: 0;
     }
+
     .is-readable-line-width.markdown-preview-view .aside-left {
       margin-left: calc(-1 * var(--aside-width) - var(--aside-gap));
       border-left: none;
       padding-inline: 0 15px;
       text-align: right;
     }
+
     .is-readable-line-width.markdown-preview-view aside,
     .is-readable-line-width.markdown-preview-view .aside-right {
       margin-right: calc(-1 * var(--aside-width) - var(--aside-gap));
@@ -72,17 +76,21 @@ body {
     }
   }
 }
+
 @media print {
+
   .print aside,
   .print .aside-left,
   .print .aside-right {
     page-break-inside: avoid;
   }
+
   .print .aside-left {
     float: left;
     clear: left;
     margin-right: var(--fas-float-inline-margin, 12px);
   }
+
   .print aside,
   .print .aside-right {
     float: right;
