--- a/snippets/editor/callouts/callout-cite.css
+++ b/snippets/editor/callouts/callout-cite.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
+
 /* GPLv3 license
 FAS - Callout Cite
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --cite-decoration-width: 50px;
@@ -21,41 +22,50 @@ body {
   border: none;
   border-inline-start: var(--blockquote-border-thickness) solid rgb(var(--callout-color));
 }
+
 .callout[data-callout~=cite-fas]:not(.is-collapsible) .callout-title,
 .callout[data-callout~=quote-fas]:not(.is-collapsible) .callout-title {
   display: none;
 }
+
 .callout[data-callout~=cite-fas].is-collapsible,
 .callout[data-callout~=quote-fas].is-collapsible {
   display: flex;
   flex-direction: column-reverse;
 }
+
 .callout[data-callout~=cite-fas].is-collapsible .callout-title,
 .callout[data-callout~=quote-fas].is-collapsible .callout-title {
   background: none;
   justify-content: flex-end;
 }
+
 .callout[data-callout~=cite-fas].is-collapsible .callout-icon,
 .callout[data-callout~=quote-fas].is-collapsible .callout-icon {
   display: none;
 }
+
 .callout[data-callout~=cite-fas].is-collapsible .callout-title-inner::before,
 .callout[data-callout~=quote-fas].is-collapsible .callout-title-inner::before {
   content: "~ ";
 }
+
 .callout[data-callout~=cite-fas] .callout-content,
 .callout[data-callout~=quote-fas] .callout-content {
   border: none;
   padding: 0;
 }
-.callout[data-callout~=cite-fas] .callout-content > :first-child,
-.callout[data-callout~=quote-fas] .callout-content > :first-child {
+
+.callout[data-callout~=cite-fas] .callout-content> :first-child,
+.callout[data-callout~=quote-fas] .callout-content> :first-child {
   margin-top: 0;
 }
-.callout[data-callout~=cite-fas] .callout-content > :plast-child,
-.callout[data-callout~=quote-fas] .callout-content > :plast-child {
+
+.callout[data-callout~=cite-fas] .callout-content> :plast-child,
+.callout[data-callout~=quote-fas] .callout-content> :plast-child {
   margin-bottom: 0;
 }
+
 .callout[data-callout~=cite-fas]::after,
 .callout[data-callout~=quote-fas]::after {
   content: "“";
@@ -72,6 +82,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(var(--callout-color), 0.1);
 }
+
 .callout[data-callout~=cite-fas] cite,
 .callout[data-callout~=quote-fas] cite {
   display: block;
@@ -82,6 +93,7 @@ body {
 }
 
 @container style(--fas-callout-cite-alt: enable) {
+
   .callout[data-callout~=cite],
   .callout[data-callout~=quote] {
     font-style: italic;
@@ -91,41 +103,50 @@ body {
     border: none;
     border-inline-start: var(--blockquote-border-thickness) solid rgb(var(--callout-color));
   }
+
   .callout[data-callout~=cite]:not(.is-collapsible) .callout-title,
   .callout[data-callout~=quote]:not(.is-collapsible) .callout-title {
     display: none;
   }
+
   .callout[data-callout~=cite].is-collapsible,
   .callout[data-callout~=quote].is-collapsible {
     display: flex;
     flex-direction: column-reverse;
   }
+
   .callout[data-callout~=cite].is-collapsible .callout-title,
   .callout[data-callout~=quote].is-collapsible .callout-title {
     background: none;
     justify-content: flex-end;
   }
+
   .callout[data-callout~=cite].is-collapsible .callout-icon,
   .callout[data-callout~=quote].is-collapsible .callout-icon {
     display: none;
   }
+
   .callout[data-callout~=cite].is-collapsible .callout-title-inner::before,
   .callout[data-callout~=quote].is-collapsible .callout-title-inner::before {
     content: "~ ";
   }
+
   .callout[data-callout~=cite] .callout-content,
   .callout[data-callout~=quote] .callout-content {
     border: none;
     padding: 0;
   }
-  .callout[data-callout~=cite] .callout-content > :first-child,
-  .callout[data-callout~=quote] .callout-content > :first-child {
+
+  .callout[data-callout~=cite] .callout-content> :first-child,
+  .callout[data-callout~=quote] .callout-content> :first-child {
     margin-top: 0;
   }
-  .callout[data-callout~=cite] .callout-content > :plast-child,
-  .callout[data-callout~=quote] .callout-content > :plast-child {
+
+  .callout[data-callout~=cite] .callout-content> :plast-child,
+  .callout[data-callout~=quote] .callout-content> :plast-child {
     margin-bottom: 0;
   }
+
   .callout[data-callout~=cite]::after,
   .callout[data-callout~=quote]::after {
     content: "“";
@@ -142,6 +163,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(var(--callout-color), 0.1);
   }
+
   .callout[data-callout~=cite] cite,
   .callout[data-callout~=quote] cite {
     display: block;
