--- a/snippets/editor/callouts/callout-email.css
+++ b/snippets/editor/callouts/callout-email.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Callout Email
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --workleaves-background: var(--background-primary);
@@ -14,12 +14,15 @@ body {
   --callout-email-color: var(--mono-rgb-100);
   --callout-color: var(--callout-email-color);
 }
+
 .callout[data-callout=email]:not([data-callout-metadata~=default-font]) {
   font-family: "Courier New", Courier, monospace;
 }
-.callout[data-callout=email] > .callout-title {
+
+.callout[data-callout=email]>.callout-title {
   gap: 10px;
 }
+
 .callout[data-callout=email] .callout {
   --callout-radius: 0;
   --callout-border-width: 2px;
@@ -35,31 +38,37 @@ body {
   display: flex;
   gap: var(--size-4-3);
 }
-.callout[data-callout=email] .callout > .callout-title {
+
+.callout[data-callout=email] .callout>.callout-title {
   flex-basis: 15ex;
   line-height: var(--line-height-normal);
   align-items: center;
   justify-content: end;
   background: none;
 }
-.callout[data-callout=email] .callout > .callout-title .callout-title-inner {
+
+.callout[data-callout=email] .callout>.callout-title .callout-title-inner {
   text-wrap: nowrap;
 }
-.callout[data-callout=email] .callout > .callout-title .callout-icon {
+
+.callout[data-callout=email] .callout>.callout-title .callout-icon {
   display: none;
 }
-.callout[data-callout=email] .callout > .callout-content {
+
+.callout[data-callout=email] .callout>.callout-content {
   flex-grow: 1;
   border: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
   background-color: var(--workleaves-background);
   color: var(--text-normal);
 }
+
 .callout[data-callout=email] .callout a[aria-label^="mailto:"] {
   text-decoration: none;
   color: unset;
   background-image: none;
   padding-inline-end: 0;
 }
+
 .callout[data-callout=email] .callout[data-callout-metadata~=sep] {
   padding-bottom: var(--size-4-6);
   border-bottom: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
