--- a/snippets/editor/callouts/callout-inline-list.css
+++ b/snippets/editor/callouts/callout-inline-list.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Callout inline and in lists
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --fas-list-callout: disable;
@@ -14,30 +14,34 @@ body {
 .callout[data-callout-metadata~=inline] {
   --p-spacing: 0;
   --callout-padding: 0;
-  --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) var(--size-2-2)
-      var(--size-2-2) var(--size-2-2);
+  --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) var(--size-2-2) var(--size-2-2) var(--size-2-2);
   --callout-content-padding: var(--size-2-2) var(--size-2-2) var(--size-2-2) var(--size-4-2);
   display: flex;
   margin-block: 0.2em;
 }
-.callout[data-callout-metadata~=inline] > .callout-title {
+
+.callout[data-callout-metadata~=inline]>.callout-title {
   background: none;
 }
-.callout[data-callout-metadata~=inline] > .callout-content {
+
+.callout[data-callout-metadata~=inline]>.callout-content {
   border-top-width: 0;
 }
-.callout[data-callout-metadata~=inline]:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title]) > .callout-content {
+
+.callout[data-callout-metadata~=inline]:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title])>.callout-content {
   border-left: var(--callout-border-width) dashed rgba(var(--callout-color), var(--callout-border-opacity));
 }
+
 @container style(--fas-skin-sci-fi: enable) {
-  .callout[data-callout-metadata~=inline]:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title]) > .callout-content {
+  .callout[data-callout-metadata~=inline]:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title])>.callout-content {
     border-left-style: solid;
   }
 }
+
 .callout[data-callout-metadata~=inline][data-callout-metadata~=only-icon] {
-  --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) 0 var(--size-2-2)
-      var(--size-2-2);
+  --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) 0 var(--size-2-2) var(--size-2-2);
 }
+
 @container style(--fas-skin-sci-fi: enable) {
   @supports (corner-shape: bevel) {
     .callout[data-callout-metadata~=inline].callout.callout.callout {
@@ -47,41 +51,46 @@ body {
 }
 
 @container style(--fas-list-callout: enable) {
-  li > .callout {
+  li>.callout {
     --p-spacing: 0;
     --callout-padding: 0;
-    --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) var(--size-2-2)
-        var(--size-2-2) var(--size-2-2);
+    --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) var(--size-2-2) var(--size-2-2) var(--size-2-2);
     --callout-content-padding: var(--size-2-2) var(--size-2-2) var(--size-2-2) var(--size-4-2);
     display: flex;
     margin-block: 0.2em;
   }
-  li > .callout > .callout-title {
+
+  li>.callout>.callout-title {
     background: none;
   }
-  li > .callout > .callout-content {
+
+  li>.callout>.callout-content {
     border-top-width: 0;
   }
-  li > .callout:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title]) > .callout-content {
+
+  li>.callout:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title])>.callout-content {
     border-left: var(--callout-border-width) dashed rgba(var(--callout-color), var(--callout-border-opacity));
   }
+
   @container style(--fas-skin-sci-fi: enable) {
-    li > .callout:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title]) > .callout-content {
+    li>.callout:not([data-callout-metadata~=only-icon], [data-callout-metadata~=no-title])>.callout-content {
       border-left-style: solid;
     }
   }
-  li > .callout[data-callout-metadata~=only-icon] {
-    --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) 0 var(--size-2-2)
-        var(--size-2-2);
+
+  li>.callout[data-callout-metadata~=only-icon] {
+    --callout-title-padding: calc(var(--size-2-2) + var(--list-callout-title-offset, 1px)) 0 var(--size-2-2) var(--size-2-2);
   }
+
   @container style(--fas-skin-sci-fi: enable) {
     @supports (corner-shape: bevel) {
-      li > .callout.callout.callout.callout {
+      li>.callout.callout.callout.callout {
         border-top-left-radius: 0;
       }
     }
   }
 }
+
 .callout[data-callout=N i] {
   --callout-icon: user;
   --callout-color: 255, 214, 0;
