--- a/snippets/editor/callouts/callout-table-cards.css
+++ b/snippets/editor/callouts/callout-table-cards.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Callout Grid
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .callout[data-callout=table-cards] {
   --table-background: rgba(var(--mono-rgb-0), 0.2);
@@ -11,43 +11,53 @@ Author: ElsaTam (Kapirklaa in Discord)
   background: none;
   border: none;
 }
+
 .callout[data-callout=table-cards] .callout-title {
   display: none;
 }
+
 .callout[data-callout=table-cards] .callout-content {
   border: none;
   padding: 0;
 }
+
 .callout[data-callout=table-cards] table {
   width: 100%;
 }
+
 .callout[data-callout=table-cards] thead {
   display: none;
 }
+
 .callout[data-callout=table-cards] tbody {
   display: grid;
   gap: 0.6em;
   grid-template-columns: repeat(auto-fill, var(--card-width));
   justify-content: center;
 }
+
 .callout[data-callout=table-cards] tr {
   display: flex;
   flex-direction: column;
   margin-block: 0;
   border: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
 }
+
 .callout[data-callout=table-cards] td {
   border: 0;
 }
+
 .callout[data-callout=table-cards] td:first-child {
   --link-decoration: none;
   border-bottom: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .callout[data-callout=table-cards] td:nth-child(n+2) {
   background-color: rgba(var(--mono-rgb-0), 0.2);
 }
+
 .callout[data-callout=table-cards] td:last-child {
   flex-grow: 1;
 }
@@ -55,11 +65,13 @@ Author: ElsaTam (Kapirklaa in Discord)
 .callout[data-callout=table-cards][data-callout-metadata~=accent] tr {
   border-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l)/var(--callout-border-opacity));
 }
+
 .callout[data-callout=table-cards][data-callout-metadata~=accent] td:first-child {
   border-bottom-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l)/var(--callout-border-opacity));
 }
 
-/* Minimal */ /*
+/* Minimal */
+/*
 .callout[data-callout=table-cards] {
     --table-width: 100%;
 }
