--- a/snippets/editor/code/code-poem.css
+++ b/snippets/editor/code/code-poem.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Code Poem
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --workleaves-background: var(--background-primary);
@@ -21,7 +21,8 @@ pre.language-poem-floral {
   position: relative;
 }
 
-pre.language-poem::before, pre.language-poem::after {
+pre.language-poem::before,
+pre.language-poem::after {
   content: "";
   position: absolute;
   left: 0;
@@ -29,9 +30,11 @@ pre.language-poem::before, pre.language-poem::after {
   height: var(--poem-border-width);
   background: linear-gradient(to right, transparent, rgb(var(--poem-color-rgb)) 20%, rgb(var(--poem-color-rgb)) 80%, transparent);
 }
+
 pre.language-poem::before {
   top: 0;
 }
+
 pre.language-poem::after {
   bottom: 0;
 }
@@ -40,10 +43,12 @@ pre.language-poem-frame {
   padding-inline: 22%;
   container: poem/inline-size;
 }
-pre.language-poem-frame > code {
+
+pre.language-poem-frame>code {
   margin-top: 17cqw;
   margin-bottom: 5cqw;
 }
+
 pre.language-poem-frame::before {
   content: "";
   position: absolute;
@@ -59,6 +64,7 @@ pre.language-poem-frame::before {
   -webkit-mask-position: top center;
   z-index: -1;
 }
+
 pre.language-poem-frame:not(.is-collapsed)::after {
   content: "";
   position: absolute;
@@ -74,6 +80,7 @@ pre.language-poem-frame:not(.is-collapsed)::after {
   -webkit-mask-position: bottom center;
   z-index: -1;
 }
+
 pre.language-poem-frame .copy-code-button {
   top: 5cqw;
   right: 50%;
@@ -84,7 +91,8 @@ pre.language-poem-floral {
   padding: 0;
   --floral-width: 18%;
 }
-pre.language-poem-floral > code {
+
+pre.language-poem-floral>code {
   margin-inline: var(--floral-width);
   border-left: var(--poem-border-width) solid rgba(var(--poem-color-rgb), 1);
   background-color: var(--workleaves-background);
@@ -94,7 +102,9 @@ pre.language-poem-floral > code {
   background-color: var(--workleaves-background);
   padding: var(--size-4-3);
 }
-pre.language-poem-floral:not(.is-collapsed)::before, pre.language-poem-floral:not(.is-collapsed)::after {
+
+pre.language-poem-floral:not(.is-collapsed)::before,
+pre.language-poem-floral:not(.is-collapsed)::after {
   content: "";
   position: absolute;
   top: 0;
@@ -108,11 +118,13 @@ pre.language-poem-floral:not(.is-collapsed)::before, pre.language-poem-floral:no
   mask-composite: intersect;
   z-index: -1;
 }
+
 pre.language-poem-floral:not(.is-collapsed)::before {
   left: 0;
   width: var(--floral-width);
   -webkit-mask-position: left bottom;
 }
+
 pre.language-poem-floral:not(.is-collapsed)::after {
   right: 0;
   width: var(--floral-width);
@@ -121,9 +133,12 @@ pre.language-poem-floral:not(.is-collapsed)::after {
   -webkit-mask-position: right bottom;
   transform: scaleX(-1) scaleY(-1);
 }
-pre.language-poem-floral.is-collapsed::before, pre.language-poem-floral.is-collapsed::after {
+
+pre.language-poem-floral.is-collapsed::before,
+pre.language-poem-floral.is-collapsed::after {
   content: none;
 }
+
 pre.language-poem-floral .copy-code-button {
   right: var(--floral-width);
 }
@@ -132,7 +147,9 @@ pre.language-poem-floral .copy-code-button {
   .print pre.language-poem-floral {
     break-inside: avoid;
   }
-  .print pre.language-poem-floral:not(.is-collapsed)::before, .print pre.language-poem-floral:not(.is-collapsed)::after {
+
+  .print pre.language-poem-floral:not(.is-collapsed)::before,
+  .print pre.language-poem-floral:not(.is-collapsed)::after {
     -webkit-mask-image: var(--left-ornament-flourish);
   }
 }
