--- a/snippets/editor/embeds/embed-inline.css
+++ b/snippets/editor/embeds/embed-inline.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Embed Inline
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .markdown-embed[alt~=faded] {
   border-inline-start: none;
@@ -8,9 +8,11 @@ Author: ElsaTam (Kapirklaa in Discord)
   border-block-start: none;
   border-block-end: none;
 }
+
 .markdown-embed[alt~=faded] .embed-title {
   display: none;
 }
-.markdown-embed[alt~=faded] > .markdown-embed-content > .markdown-preview-view {
+
+.markdown-embed[alt~=faded]>.markdown-embed-content>.markdown-preview-view {
   padding: 0;
 }
