--- a/snippets/editor/footnotes.css
+++ b/snippets/editor/footnotes.css
@@ -1,6 +1,6 @@
 /* GPLv3 license
 FAS - Footnote
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 .theme-light {
   --shadow-color: rgba(0, 0, 0, 0.2);
