--- a/snippets/plugins/core/file-explorer-bullet.css
+++ b/snippets/plugins/core/file-explorer-bullet.css
@@ -1,12 +1,12 @@
 /* GPLv3 license
 FAS - File Explorer Bullet
-Author: ElsaTam (Kapirklaa in Discord)
+Author: ElsaTam (Kapirklaa on Discord)
 */
 body {
   --active-file-bullet-size: 6px;
 }
 
-.nav-folder:has(.nav-file-title.is-active) > .nav-folder-title::after,
+.nav-folder:has(.nav-file-title.is-active)>.nav-folder-title::after,
 .nav-file-title.is-active::after,
 .nav-folder-title.is-active::after {
   content: "";
